NEWS for the R Package Luminescence

Changes in version 0.4.5 (, 2015):

  Changes S4-objects, methods, classes:

         • Dummy

  Bugfixes and changes:

         • ‘calc_Statistics()’

             • default setting of weights definition changed from 1/s
               to 1/s^2

         • ‘plot_AbanicoPlot()’

             • zlim-definition bug removed,

             • automatic bandwidth adjustment implemented,

             • automatic z-axis scaling for zero scatter implemented,

             • qr (quartile range) set as default option for scatter
               polygon,

             • option cinn (confidence intervals) changed to pnn
               (percentiles),

             • summary content 'in confidence interval' changed to 'in
               2 sigma',

             • argument central.value renamed to z.0,

             • argument centrality removed,

             • argument bar.col added.

         • ‘plot_KDE()’

             • summary content 'in confidence interval' changed to 'in
               2 sigma'

         • ‘plot_RadialPlot()’

             • summary content 'in confidence interval' changed to 'in
               2 sigma'

         • ‘plot_RLum.Data.Curve()’

             • NA-test implemented. Nothing is plotted if the curve
               contains NA-values (previous behaviour: function stopped
               with an error).

         • ‘readXSYG2R()’

             • The import will not break any longer if the XSYG file is
               incomplete. Incomplete sequences will be removed from
               the output (incl. terminal feedback).

         • ‘Risoe.BINfileData2RLum.Data.Curve()’

             • Corrupt RisoeBINfileData-objects containing no
               measurement data (NPOINTS = 0) no longer cause an error
               during while the RLum.Data.Curve-object is produced.
               Curve x- and y-values are set to NA (BIN-file issue
               Norbert Mercier).

  Internals:
