@@ -887,11 +887,11 @@
 </td>
 <td class=cellinside><br /> Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.<br />
 </td>
-<td class=cellinside>0.2.2
+<td class=cellinside>0.2.3
 </td>
-<td class=cellinside>2015-04-30
+<td class=cellinside>2015-07-21
 </td>
-<td class=cellinside>11:57:42
+<td class=cellinside>14:34:10
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1271,7 +1271,7 @@
 </td>
 <td class=cellinside>2015-07-19
 </td>
-<td class=cellinside>17:57:00
+<td class=cellinside>18:01:49
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
