@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Sun Jul 19 17:59:31 2015
+% Tue Jul 21 14:41:00 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -84,7 +84,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   44 & length\_RLum & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.1 & 2015-07-19 & 14:21:05
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  45 & merge\_Risoe.BINfileData & Merge Risoe.BINfileData objects or Risoe BIN-files & $<$br /$>$ Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.$<$br /$>$ & 0.2.2 & 2015-04-30 & 11:57:42
+  45 & merge\_Risoe.BINfileData & Merge Risoe.BINfileData objects or Risoe BIN-files & $<$br /$>$ Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.$<$br /$>$ & 0.2.3 & 2015-07-21 & 14:34:10
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   46 & merge\_RLum.Analysis & Merge function for RLum.Analysis S4 class objects & $<$br /$>$ Function allows merging of RLum.Analysis objects and adding of allowed$<$br /$>$ objects to an RLum.Analysis.$<$br /$>$ & 0.1 & 2015-06-16 & 15:23:12
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -124,7 +124,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   64 & readSPE2R & Import Princeton Intruments (TM) SPE-file into R & $<$br /$>$ Function imports Princeton Instruments (TM) SPE-files into R environment and$<$br /$>$ provides  RLum  objects as output.$<$br /$>$ & 0.1 & 2015-07-01 & 16:32:11
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  65 & readXSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.4.4 & 2015-07-19 & 17:57:00
+  65 & readXSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.4.4 & 2015-07-19 & 18:01:49
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   66 & Risoe.BINfileData-class & Class  "Risoe.BINfileData" & $<$br /$>$ S4 class object for luminescence data in R. The object is produced as output$<$br /$>$ of the function  readBIN2R .$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
   67 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.1.2 & 2015-06-16 & 15:23:12
