@@ -13,6 +13,10 @@ Changes in version 0.4.5 (, 2015):
              • default setting of weights definition changed from 1/s
                to 1/s^2
 
+         • ‘merge_Risoe.BINfileData()’
+
+             • Confusing warning message corrected (#230, Thomas Kolb).
+
          • ‘plot_AbanicoPlot()’
 
              • zlim-definition bug removed,
